// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@tschannel/transformer Should run normally with the transformer 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.x = void 0;
const core_1 = require(\\"@tschannel/core\\");
exports.x = 'string';
console.info(core_1.Channel);
"
`;

exports[`@tschannel/transformer Should transform the interface parameter correctly 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
const core_1 = require(\\"@tschannel/core\\");
const channel = new core_1.Channel();
channel.rclass(\\"RemoteAPI\\", class RemoteAPIImpl_1 {
    method() { }
});
{ }
"
`;
